refactor: Made the followinng working: Integrated Oracle-based URL sourcing, JSoup-based fetching, and Elasticsearch indexing of URL and page text